
		----------------------------------

ChangeLog about GNU GLOBAL

**** * 2002, Shigio Yamaguchi  <shigio@gnu.org>

	* gtags.c: --convert/--createdb/--readdb/--scandb option added.
	* btreeop: replaced with gtags and removed.
	* split.c: use SPLIT structure which manage substring.
	* gtagsop.c: now format version is 3 (pathindex format).
	* configure.ac: fixed for autoconf-2.53 and renamed.

July 4 2002, Shigio Yamaguchi  <shigio@gnu.org>

	* gctags.c: allows second argument in *ENTRY for 4.3BSD.
	* split.c: splitting function added.
	* strlimcpy.c: replaced strcpy() and strncpy() with strlimcpy().
	* strbuf.c: strbuf_putn() added.
	* conf.c find.c: shut buffer overflow.
	* gtags, htags: './' removed from path name in verbose message.
	* *.c, *.h: copyright year fixed.
	* configure.in: macro AG_BYTE_ORDER recovered.
	* htags: sort command replaced with gtags --sort in makedupindex()
	  so that sort can treat smaller number of tag lines.
	* htags: makedupindex() rewritten for performance.

March 30 2002, Shigio Yamaguchi  <shigio@gnu.org>

	* conf.c: added GPATH,GTAGS,GRTAGS,GSYMS,tags,TAGS,ID to DEFAULTSKIP.
	* find.c: decreased dependency on find(1).
	  removed length argument from find_read().
	* global.texi: documentation reconstucted.
	* globash.rc: --no-wait option added to emacsclient.
	* gozilla: gozilla directory added.
	* abs2rel.c: added for path conversion. pathfilter with sed(1)
	  is replaced gtags(1) --relative or --absolute.
	* global: use lid(1) rather than gid(1).
	* usable.c: locate command for BINDIR before PATH.
	* htags: bless.sh remove cgi-bin/global.cgi because it is not needed.
	* htags: changed open into 'open + exec' to avoid command substitutions
	  in pattern.

January 22 2002, Shigio Yamaguchi  <shigio@gnu.org>

	* htags: build trouble fixed.
	  global.cgi wasn't generated correctly.

January 10 2002, Shigio Yamaguchi  <shigio@gnu.org>

	* DJGPP support code added.
	  Jason Hood ported Global-4.0.1 into DJGPP environment.